assets/css/style.css
/* ... */
  .form-input .input-items.success i {
    color: #4da422; }
  .form-input .input-items.disabled input, .form-input .input-items.disabled textarea {
    border-color: #a4a4a4;
    color: #6c6c6c;
    background: none; }
    .form-input .input-items.disabled input::placeholder, .form-input .input-items.disabled textarea::placeholder {
      color: #6c6c6c;
      opacity: 1; }
    .form-input .input-items.disabled input::-moz-placeholder, .form-input .input-items.disabled textarea::-moz-placeholder {
      color: #6c6c6c;
      opacity: 1; }
    .form-input .input-items.disabled input::-moz-placeholder, .form-input .input-items.disabled textarea::-moz-placeholder {
      color: #6c6c6c;
      opacity: 1; }
    .form-input .input-items.disabled input::-webkit-input-placeholder, .form-input .input-items.disabled textarea::-webkit-input-placeholder {
      color: #6c6c6c;
      opacity: 1; }
  .form-input .input-items.disabled i {
    color: #6c6c6c; }

.form-style-two .form-input .input-items input, .form-style-two .form-input .input-items textarea {
  border-radius: 5px;
  padding-left: 12px;
  padding-right: 44px; }
.form-style-two .form-input .input-items i {
  left: auto;
  right: 13px; }

.form-style-three .form-input {
  text-align: center; }
  .form-style-three .form-input .input-items input, .form-style-three .form-input .input-items textarea {
    border-radius: 50px;
    text-align: center; }

.form-style-four .form-input label {
  padding-left: 44px;
  margin-bottom: 0; }
.form-style-four .form-input .input-items input, .form-style-four .form-input .input-items textarea {
  border-top: 0;
  border-left: 0;
  border-right: 0; }

.form-style-five .form-input {
  position: relative; }
  .form-style-five .form-input label {
    position: absolute;
    top: -10px;
    left: 10px;
    background-color: #fff;
    z-index: 5;
    padding: 0 5px; }
  .form-style-five .form-input .input-items input, .form-style-five .form-input .input-items textarea {
    border-radius: 5px; }

/*===========================
        09.NAVBAR css 
===========================*/
.navbar-area {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  padding: 10px 0;
  z-index: 99; }
  .navbar-area .navbar {
    position: relative;
    padding: 0; }
    .navbar-area .navbar .navbar-toggler .toggler-icon {
      width: 30px;
      height: 2px;
      background-color: #fff;
      margin: 5px 0;
      display: block;
      position: relative;
      -webkit-transition: all 0.3s ease-out 0s;
      -moz-transition: all 0.3s ease-out 0s;
      -ms-transition: all 0.3s ease-out 0s;
      -o-transition: all 0.3s ease-out 0s;
      transition: all 0.3s ease-out 0s; }
    .navbar-area .navbar .navbar-toggler.active .toggler-icon:nth-of-type(1) {
      -webkit-transform: rotate(45deg);
      -moz-transform: rotate(45deg);
      -ms-transform: rotate(45deg);
      -o-transform: rotate(45deg);
      transform: rotate(45deg);
      top: 7px; }
    .navbar-area .navbar .navbar-toggler.active .toggler-icon:nth-of-type(2) {
      opacity: 0; }
    .navbar-area .navbar .navbar-toggler.active .toggler-icon:nth-of-type(3) {
      -webkit-transform: rotate(135deg);
      -moz-transform: rotate(135deg);
      -ms-transform: rotate(135deg);
      -o-transform: rotate(135deg);
      transform: rotate(135deg);
      top: -7px; }
    @media only screen and (min-width: 768px) and (max-width: 991px) {
      .navbar-area .navbar .navbar-collapse {
        position: absolute;
        top: 115%;
        left: 0;
        width: 100%;
        background-color: #f4f6f7;
        z-index: 8;
        padding: 10px 0;
        -webkit-box-shadow: 0px 10px 25px 0px rgba(18, 18, 18, 0.05);
        -moz-box-shadow: 0px 10px 25px 0px rgba(18, 18, 18, 0.05);
        box-shadow: 0px 10px 25px 0px rgba(18, 18, 18, 0.05); } }
    @media (max-width: 767px) {
      .navbar-area .navbar .navbar-collapse {
        position: absolute;
        top: 115%;
        left: 0;
        width: 100%;
        background-color: #f4f6f7;
        z-index: 8;
        padding: 10px 0;
        -webkit-box-shadow: 0px 10px 25px 0px rgba(18, 18, 18, 0.05);
        -moz-box-shadow: 0px 10px 25px 0px rgba(18, 18, 18, 0.05);
        box-shadow: 0px 10px 25px 0px rgba(18, 18, 18, 0.05); } }
    .navbar-area .navbar .navbar-nav .nav-item {
      margin: 0 16px;
      position: relative; }
      .navbar-area .navbar .navbar-nav .nav-item a {
        font-size: 16px;
        line-height: 24px;
        font-weight: 700;
        padding: 26px 0;
        color: #fff;
        text-transform: uppercase;
        position: relative;
        opacity: 0.8;
        -webkit-transition: all 0.3s ease-out 0s;
        -moz-transition: all 0.3s ease-out 0s;
        -ms-transition: all 0.3s ease-out 0s;
        -o-transition: all 0.3s ease-out 0s;
        transition: all 0.3s ease-out 0s; }
        @media only screen and (min-width: 768px) and (max-width: 991px) {
          .navbar-area .navbar .navbar-nav .nav-item a {
            padding: 10px 0;
            display: block;
            color: #3C3B40; } }
        @media (max-width: 767px) {
          .navbar-area .navbar .navbar-nav .nav-item a {
            padding: 10px 0;
            display: block;
            color: #3C3B40; } }
/* ... */

